assets/sass/core/_mixins.sass
/* ... */
    border-radius: $radius 0 0 0
  @else if $dir == top-right
    @each $prefix in $prefixes
      -#{$prefix}-border-radius: 0 $radius 0 0
    border-radius: 0 $radius 0 0
  @else if $dir == top-left
    @each $prefix in $prefixes
      -#{$prefix}-border-radius: 0 0 $radius 0
    border-radius: 0 0 $radius 0
  @else if $dir == top-right
    @each $prefix in $prefixes
      -#{$prefix}-border-radius: 0 0 0 $radius
    border-radius: 0 0 0 $radius


@mixin border-top-left-radius($radius)
  border-radius: $radius 0 0 0
  
@mixin border-top-right-radius($radius)
  border-radius: 0 $radius 0 0
  
@mixin border-bottom-left-radius($radius)
  border-radius: 0 0 $radius 0
  
@mixin border-bottom-right-radius($radius)
  border-radius: 0 0 0 $radius
  
  
  
// Typography
// ----------------------------
@mixin force-wrap
  white-space: pre
  white-space: pre-wrap
  white-space: pre-line
  white-space: -pre-wrap
  white-space: -o-pre-wrap
  white-space: -moz-pre-wrap
  white-space: -hp-pre-wrap
  word-wrap: break-word



// Grid
// --------------------------------------------------------

// Grid Rows
// ----------------------------
@mixin grid-rows($value, $direction, $rows: $max-rows)
  @if $value == normal
    // Rows by 5
    @for $i from 1 through $rows
      $num: $i * 5
      $decimal: $num / 100
      .#{$grid-class}-#{$num}
        @extend %grid-column
        width: 1% * $num
        @include ie7-grid-element($decimal)
      .#{$pull-class}-#{$num}
        #{$direction}: -(1% * $num)
        @include ie7-pull($decimal)
      .#{$push-class}-#{$num}
        #{$direction}: (1% * $num)
        @include ie7-push($decimal)

  @else if $value == thirds
    // Rows by 1/3
    @for $i from 1 through 2
      $num: $i * 33
      $mul: 1/3
      $decimal: $i * $mul
      $percent: ($num + $decimal)
  
      .#{$grid-class}-#{$num}
        @extend %grid-column
        width: 1% * $percent
        @include ie7-grid-element($decimal)
      .#{$pull-class}-#{$num}
        #{$direction}: -(1% * $percent)
        @include ie7-pull($decimal)
      .#{$push-class}-#{$num}
        #{$direction}: (1% * $percent)
        @include ie7-push($decimal)

  @else if $value == mobile
    // Rows for Mobile
    @for $i from 1 through 3
      $num: $i * 25
      .#{$mobile-class}-#{$num}
        width: 1% * $num
      .mobile-#{$pull-class}-#{$num}
        #{$direction}: -(1% * $num)
      .mobile-#{$push-class}-#{$num}
        #{$direction}: (1% * $num)


// Default Grid Generator
// ----------------------------
// @include grid($direction)
@mixin grid($direction:$lang-front, $content-width: $grid-size, $space:$max-space, $rows:$max-rows)
  .container
    width: $content-width
    @include element-spacing(auto, margin)
    %grid-column
      +box-sizing(border-box)
      @include float-direction($direction)
      padding: 0 15px
      @include ie-7-support($space)
      position: relative
    
    @include grid-rows(normal, $direction)
    @include grid-rows(thirds, $direction)
    @include alpha-omega($direction)
    @include grid-center
    @include hide-view(desktop)
    

// Mobile Grid Generator - NO PUSH OR PULL
// ----------------------------
// @include grid-mobile($direction)

@mixin grid-mobile ($direction:$lang-front, $content-width: $max-resp-width, $space: $max-resp-space)
  $grid-width: 100%
  .container
    width: $content-width
    @include element-spacing(auto, margin)
    [class^="#{$grid-class}-"]
      display: inline
      @include float-direction($direction)
      width: $grid-width
      [class^="#{$grid-class}-"], 
      [class^="#{$mobile-class}-#{$grid-class}-"]
        padding: 0
        margin: 0

    @include grid-rows(mobile, $direction)
    @include alpha-omega($direction)
    @include grid-center
    
    [class^="#{$pull-class}-"],
    [class^="#{$push-class}-"]
      #{$direction}: 0
      
    @include hide-view(mobile)
  

// IE 7 Support
// ----------------------------
@mixin ie-7-support($space)
  @if $ie7-support
    *padding-left: 0
    *padding-right: 0
    & > *
      @include ie-after-margin-fix($space)

@mixin ie-percentage-width-fix($decimal)
  *width: expression(Math.floor(#{$decimal} * (this.parentNode.offsetWidth - parseFloat(this.parentNode.currentStyle.paddingLeft) - parseFloat(this.parentNode.currentStyle.paddingRight))) + "px")
  
@mixin ie-percentage-push-fix($lang-front, $decimal)
  *#{$lang-front}: expression(Math.floor(#{$decimal} * (this.parentNode.offsetWidth - parseFloat(this.parentNode.currentStyle.paddingLeft) - parseFloat(this.parentNode.currentStyle.paddingRight))) + "px")
  
@mixin ie-percentage-pull-fix($lang-front, $decimal)
  *#{$lang-front}: expression(Math.floor(#{$decimal * -1} * (this.parentNode.offsetWidth - parseFloat(this.parentNode.currentStyle.paddingLeft) - parseFloat(this.parentNode.currentStyle.paddingRight))) + "px")
  
@mixin ie-percentage-direction-fix($decimal)

@mixin ie7-grid-element($decimal)
  @if $ie7-support
    @include ie-percentage-width-fix($decimal)
  
@mixin ie7-push($decimal)
  @if $ie7-support
    @include ie-percentage-push-fix($lang-front, $decimal)
  
@mixin ie7-pull($decimal)
  @if $ie7-support
    @include ie-percentage-pull-fix($lang-front, $decimal)


// Grid Float Direction (LTR or RTL)
// ----------------------------
@mixin float-direction($direction)
  @if ($direction == left)
    float: left
  @else if ($direction == right)
    float: right
    





// Show and Hide Elements
// ----------------------------
@mixin hide-view($view)
  @if $view == desktop
    .hide-desktop,
    .hide-tablet
      display: none !important
    .hide-mobile
      display: block !important
    
  @if $view == tablet
    .hide-desktop,
    .hide-mobile
      display: none !important
    .hide-tablet
      display: block !important
  
  @if $view == mobile
    .hide-desktop,
    .hide-tablet
      display: none !important
    .hide-mobile
      display: block !important


@mixin show-block($element)
  .show-#{$element}
/* ... */

